--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "express": "^4.15.2",
     "firebase": "^3.7.1",
+    "password-hash-and-salt": "^0.1.4",
     "sendgrid": "^4.8.0",
     "socket.io": "^1.7.3"
   }
