--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Instapapas is a social network similar to Instagram, but better",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "test": "echo \"¯\_(ツ)_/¯\""
   },
   "repository": {
     "type": "git",
