--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"¯\_(ツ)_/¯\""
+    "test": "echo \"\u00AF\\_(\u30C4)_\/\u00AF\""
   },
   "repository": {
     "type": "git",
