Commented code and added a little explanation in the README, much improvement needed

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/ANyanCatFan/instapapas#readme",
   "keywords": [
-    "Instapapas",
+    "instapapas",
     "social network"
   ],
   "dependencies": {
